compiler/fabc_parser/src/ast/stmt/snapshots/fabc_parser__ast__stmt__r#return__tests__parses_return_without_value.snap
---
source: compiler/fabc_parser/src/ast/stmt/return.rs
expression: return_stmt
---
ReturnStmt {
    info: NodeInfo {
        id: 0,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                7,
            ),
        },
    },
    value: None,
}
